prototype working version

--- a/views/confs/global.cfg
+++ b/views/confs/global.cfg
@@ -1,6 +1,4 @@
 [global]
-server.socket_host: "0.0.0.0"
-server.socket_port = 9090
 checkpoints_path = '../checkpoints/'
-data_path = '../../h3db/'
+data_path = '../datasets/'
 uploads_path = './uploads/'
