--- a/views/confs/default.cfg
+++ b/views/confs/default.cfg
@@ -7,4 +7,11 @@ tools.staticdir.on = True
 tools.staticdir.dir = 'public'
 
 [APPS]
-app_list = ['DialogType', 'BayesNet']
+app_list = [ {'name': 'Dialog Type',
+              'description': 'Detetect the dialog type for your input text.',
+              'link': '/mails'
+             },
+             {'name': 'Bayes Net',
+              'description': 'Using Bayesian networks to explore causality in features.',
+              'link': '/bayesnet'
+              },]
