- enable session - add DataModel - change app_list config in global - remove body margin in style.css

--- a/views/confs/global.cfg
+++ b/views/confs/global.cfg
@@ -2,3 +2,12 @@
 checkpoints_path = '../checkpoints/'
 data_path = '../datasets/'
 uploads_path = './uploads/'
+tools.sessions.on: True
+app_list = [ {'name': 'Dialog Type',
+              'description': 'Detetect the dialog type for your input text.',
+              'link': '/mails'
+             },
+             {'name': 'Bayes Net',
+              'description': 'Using Bayesian networks to explore causality in features.',
+              'link': '/bayesnet'
+              },]
