- update cognuts logo

--- a/views/confs/global.cfg
+++ b/views/confs/global.cfg
@@ -11,3 +11,5 @@ app_list = [ {'name': 'Dialog Type',
               'description': 'Using Bayesian networks to explore causality in features.',
               'link': '/bayesnet'
               },]
+[/favicon.ico]
+tools.staticfile.filename: "/favicon.png"
