--- a/views/confs/global.cfg
+++ b/views/confs/global.cfg
@@ -11,5 +11,4 @@ app_list = [ {'name': 'Dialog Type',
               'description': 'Using Bayesian networks to explore causality in features.',
               'link': '/bayesnet'
               },]
-[/favicon.ico]
-tools.staticfile.filename: "/favicon.png"
+sql_db = '../database/cognuts_web_meta.db'
