--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 nltk==3.2.1
+peewee==2.10.1
 paramiko==2.0.2
 pandas==0.18.1
 bokeh==0.12.4
@@ -7,8 +8,9 @@ termcolor==1.1.0
 scipy==0.18.0
 causality==0.0.3
 dill==0.2.5
+simplejson==3.11.1
 Jinja2==2.9.5
 libpgm==1.3
 numpy==1.11.1
 matplotlib==1.5.1
-scikit_learn==0.18
+scikit_learn==0.19b2
