add view for Stack Secure app

--- a/views/confs/global.cfg
+++ b/views/confs/global.cfg
@@ -10,5 +10,9 @@ app_list = [ {'name': 'Dialog Type',
              {'name': 'Bayes Net',
               'description': 'Using Bayesian networks to explore causality in features.',
               'link': '/bayesnet'
+              },
+             {'name': 'Stack Secure',
+              'description': 'Security analysis of Java code snippets from Stack Overflow.',
+              'link': '/stacksecure'
               },]
 sql_db = '../database/cognuts_web_meta.db'
