- web socket working

--- a/views/confs/default.cfg
+++ b/views/confs/default.cfg
@@ -4,4 +4,6 @@ tools.staticdir.root = os.path.abspath(os.getcwd())
 tools.staticdir.dir = 'public'
 tools.staticdir.on = True
 
-
+[/ws]
+tools.websocket.on = True
+tools.websocket.handler_cls = apps.WebSocketHandler.WebSocketHandler
