--- a/views/confs/BayesNet.cfg
+++ b/views/confs/BayesNet.cfg
@@ -3,3 +3,7 @@ tools.sessions.on = True
 tools.staticdir.root = os.path.abspath(os.getcwd())
 tools.staticdir.dir = 'public'
 tools.staticdir.on = True
+
+[/ws]
+tools.websocket.on = True
+tools.websocket.handler_cls = apps.BayesNet.BayesNet.SocketHandler
