--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 nltk==3.2.1
 peewee==2.10.1
 paramiko==2.0.2
+ws4py==0.4.2
 pandas==0.18.1
 bokeh==0.12.4
 CherryPy==11.0.0
@@ -13,4 +14,4 @@ Jinja2==2.9.5
 libpgm==1.3
 numpy==1.11.1
 matplotlib==1.5.1
-scikit_learn==0.19b2
+scikit_learn==0.19.0
