add StackSecure cherrypy

--- a/views/confs/StackSecure.cfg
+++ b/views/confs/StackSecure.cfg
@@ -1,5 +1,22 @@
 [/]
-tools.sessions.on = True
 tools.staticdir.root = os.path.abspath(os.getcwd())
 tools.staticdir.dir = 'public'
 tools.staticdir.on = True
+
+[/snippet]
+request.dispatch: cherrypy.dispatch.MethodDispatcher()
+tools.response_headers.on : True
+tools.response_headers.headers : [('Content-Type', 'application/json')]
+
+[/similarsnippet]
+request.dispatch: cherrypy.dispatch.MethodDispatcher()
+tools.response_headers.on : True
+tools.response_headers.headers : [('Content-Type', 'application/json')]
+
+[/security]
+request.dispatch: cherrypy.dispatch.MethodDispatcher()
+tools.response_headers.on : True
+tools.response_headers.headers : [('Content-Type', 'text/plain')]
+
+[/snippetdatabasehelper]
+request.dispatch: cherrypy.dispatch.MethodDispatcher()
