--- a/views/confs/global.cfg
+++ b/views/confs/global.cfg
@@ -2,7 +2,7 @@
 checkpoints_path = '../checkpoints/'
 data_path = '../datasets/'
 uploads_path = './uploads/'
-tools.sessions.on: True
+tools.sessions.on = True
 app_list = [ {'name': 'Dialog Type',
               'description': 'Detetect the dialog type for your input text.',
               'link': '/mails'
